--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ h1 {
     width: 200px;
     height: 200px;
     border-radius: 60px;
+    border: 1px solid #b8b8b8;
     background: url('aa9697a3f7a61389675b8dc109518753.gif') no-repeat center center;
     background-size: cover; 
     background-position: center;
