--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ h1 {
     height: 200px;
     border-radius: 60px;
     /* border: 2px solid #b8b8b8; */
-    background: url('aa9697a3f7a61389675b8dc109518753.gif') no-repeat center center;
     background-size: cover; 
     background-position: center;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
@@ -45,7 +44,7 @@ h1 {
     left: 0;
     width: 100%;
     height: 30%;
-    background: linear-gradient(to top, #89919cb9, rgba(0,0,0,0));
+    background: linear-gradient(to top, #3b3c3db9, rgba(0,0,0,0));
     z-index: 0; 
 }
 
@@ -126,6 +125,28 @@ img{
 p, h2{
     opacity: .85;
 }
+
+.city-buttons{
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    margin-bottom: -7rem;
+    transition: background-color 0.3s;
+}
+
+button{
+    background: none;
+    border: none;
+    font-family: 'poppins', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    cursor: pointer;
+    margin: 1rem;
+    margin-top: 5rem;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 
 footer {
     position: fixed;
