--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body {
     background-color: #efefef;
 }
 
+* {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .container {
     text-align: center;
 }
