--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,11 @@ h1 {
     height: 200px;
     border-radius: 60px;
     /* border: 2px solid #b8b8b8; */
-    background-size: cover; 
     background-position: center;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    background-size: cover; 
+    background-repeat: no-repeat;
+    background-position: center;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -37,7 +39,8 @@ h1 {
     align-items: center;
     overflow: hidden;
     position: relative;
-    margin-top: -7rem;
+    margin-top: -6rem;
+    margin-bottom: 5rem;
     box-shadow: inset #5d5d5d 5px 5px 5px -5px; 
 }
 
@@ -136,6 +139,7 @@ p, h2{
     cursor: pointer;
     margin-bottom: -7rem;
     transition: background-color 0.3s;
+    text-align: center;
 }
 
 button{
@@ -146,7 +150,8 @@ button{
     font-size: 14px;
     cursor: pointer;
     margin: 1rem;
-    margin-top: 5rem;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
     -webkit-tap-highlight-color: transparent;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
